memo_app_css.css
/* Color palette:

	Primary:
		Main - #5d4037
		Light - #8b6b61
		Dark - #321911
		
	Secondary:
		Main - #009688
		Light - #52c7b8
		Dark - #00675b
		
	Assisted by: https://material.io/color
*/
.panel-body:hover{
	background-color: #009688;
	border-color: #009688;
	color: white;
}

.notice {
	color: red;
}

.bg-info {
	background-color: #52c7b8;
}

.inline {
	display: inline;
}	

.main-background { background-color: #eee; }

.bottom-padding { margin-bottom: 15px; }

.top-padding { margin-top: 5px; }

.main-text { color: black; }

.login-form { 
	padding: 30px; 
	max-width: 450px;
	margin: 0 auto;
}

.sidenav {
	background-color: #5d4037;
	height: 100%;
	color: white;
	padding: 15px;
}

.input-group{
	margin-top: 20px;
	margin-bottom: 20px;
	margin-right: 5px;
}

/* SET A SCALABLE HEIGHT */
.row.content { 
	height: 100%; 
	position: absolute;
}
/* /SET A SCALABLE HEIGHT */

/* SHAPES */
.circle {
	border-radius: 50%;
	width: 50px;
	height: 50px; 
}
/* /SHAPES */

/* Buttons */
.btn-primary {
	background-color: #009688;
	border-color: #009688;
	color: #000000;
}

.btn-primary:hover {
	background-color: #009688;
	border-color: #009688;
	color: #FFFFFF;
}

.btn.btn-primary:hover{
	background-color: #009688;
	border-color: #009688;
	color: #FFFFFF;
}

.btn.btn-primary:focus{
	background-color: #52c7b8;
	border-color: #321911;
	color: black;
}

.btn.btn-info{
	background-color: #52c7b8;
	border-color: #52c7b8;
	color: #000000;
}

.btn.btn-info:hover{
	background-color: #52c7b8;
	border-color: #52c7b8;
	color: white;
}
/* /Buttons */

